Final paper version

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -29,26 +29,85 @@
 }
 
 @misc{eurostat_comp_use,
-    author= {{Eurostat}},
+    author= {Eurostat},
+    year = "2020",
     title = {Use of computers and the internet by employees},
     url  = {https://appsso.eurostat.ec.europa.eu/nui/show.do?query=BOOKMARK_DS-057202_QID_34F130EE_UID_-3F171EB0&layout=TIME,C,X,0;GEO,L,Y,0;INDIC_IS,L,Z,0;UNIT,L,Z,1;SIZEN_R2,L,Z,2;INDICATORS,C,Z,3;&zSelection=DS-057202INDICATORS,OBS_FLAG;DS-057202INDIC_IS,P_CUSE;DS-057202SIZEN_R2,10_C10_S951_XK;DS-057202UNIT,PC_EMP;&rankName1=UNIT_1_2_-1_2&rankName2=INDICATORS_1_2_-1_2&rankName3=INDIC-IS_1_2_-1_2&rankName4=SIZEN-R2_1_2_-1_2&rankName5=TIME_1_0_0_0&rankName6=GEO_1_2_0_1&sortC=ASC_-1_FIRST&rStp=&cStp=&rDCh=&cDCh=&rDM=true&cDM=true&footnes=false&empty=false&wai=false&time_mode=NONE&time_most_recent=false&lang=EN&cfo=\%23\%23\%23\%2C\%23\%23\%23.\%23\%23\%23}, 
     lastaccessed="February 8, 2020"
 }
 
+@misc{tflite_pose_estimation,
+    author = {Google inc.},
+    year = "2020",
+    title = {TensorFlow Pose estimation},
+    url = {https://www.tensorflow.org/lite/models/pose_estimation/overview}, 
+    lastaccessed="February 12, 2020"
+}
+
+@misc{tf_js_pose_estimation, 
+    title = {Real-time Human Pose Estimation in the Browser with TensorFlow.js}, 
+    author = {Oved, Dan and Alvarado, Irene and Gallo, Alexis}, 
+    year = {2018}, 
+    url = {https://medium.com/tensorflow/real-time-human-pose-estimation-in-the-browser-with-tensorflow-js-7dd0bc881cd5}, 
+    lastaccessed="February 12, 2020" 
+}
+
+@misc{posenet_github, 
+    title = {Pose Detection in the Browser: PoseNet Model}, 
+    author = {Google inc.}, 
+    year = "2020", 
+    url = {https://github.com/tensorflow/tfjs-models/blob/master/posenet/README.md}, 
+    lastaccessed="February 12, 2020"
+}
+
+@misc{pap2017accurate,
+    title={Towards Accurate Multi-person Pose Estimation in the Wild},
+    author={George Papandreou and Tyler Zhu and Nori Kanazawa and Alexander Toshev and Jonathan Tompson and Chris Bregler and Kevin Murphy},
+    year={2017},
+    eprint={1701.01779},
+    archivePrefix={arXiv},
+}
+
+@misc{pap2018personlab,
+    title={PersonLab: Person Pose Estimation and Instance Segmentation with a Bottom-Up, Part-Based, Geometric Embedding Model},
+    author={George Papandreou and Tyler Zhu and Liang-Chieh Chen and Spyros Gidaris and Jonathan Tompson and Kevin Murphy},
+    year={2018},
+    eprint={1803.08225},
+    archivePrefix={arXiv},
+}
+
 @inproceedings{demmans2007posture,
-  title={Posture monitoring and improvement for laptop use},
-  author={Demmans, Carrie and Subramanian, Sriram and Titus, Jon},
-  booktitle={CHI'07 Extended Abstracts on Human Factors in Computing Systems},
-  pages={2357--2362},
-  year={2007}
+    author = {Demmans, Carrie and Subramanian, Sriram and Titus, Jon},
+    title = {Posture Monitoring and Improvement for Laptop Use},
+    year = {2007},
+    isbn = {9781595936424},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    url = {https://doi.org/10.1145/1240866.1241007},
+    doi = {10.1145/1240866.1241007},
+    booktitle = {CHI ’07 Extended Abstracts on Human Factors in Computing Systems},
+    pages = {2357–2362},
+    numpages = {6},
+    keywords = {attentive user interfaces, captology, posture},
+    location = {San Jose, CA, USA},
+    series = {CHI EA ’07}
 }
 
 @inproceedings{jaimes2005sit,
-  title={Sit straight (and tell me what I did today) a human posture alarm and activity summarization system},
-  author={Jaimes, Alejandro},
-  booktitle={Proceedings of the 2nd ACM workshop on Continuous archival and retrieval of personal experiences},
-  pages={23--34},
-  year={2005}
+  author = {Jaimes, Alejandro},
+title = {Sit Straight (and Tell Me What I Did Today): A Human Posture Alarm and Activity Summarization System},
+year = {2005},
+isbn = {1595932461},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1099083.1099087},
+doi = {10.1145/1099083.1099087},
+booktitle = {Proceedings of the 2nd ACM Workshop on Continuous Archival and Retrieval of Personal Experiences},
+pages = {23–34},
+numpages = {12},
+keywords = {ergonomics, computer vision, posture},
+location = {Hilton, Singapore},
+series = {CARPE ’05}
 }
 
 @article{kaber1997out,
@@ -292,4 +351,208 @@ doi={10.1007/978-3-319-67744-6_33}
   year={2010},
   organization={ACM},
   doi={10.1145/1753326.1753663}
+}
+
+@article{hakala2006frequent,
+  title={Frequent computer-related activities increase the risk of neck--shoulder and low back pain in adolescents},
+  author={Hakala, Paula T and Rimpel{\"a}, Arja H and Saarni, Lea A and Salminen, Jouko J},
+  journal={The European Journal of Public Health},
+  volume={16},
+  number={5},
+  pages={536--541},
+  year={2006},
+  publisher={Oxford University Press},
+  doi={10.1093/eurpub/ckl025}
+}
+@inproceedings{paliyawan2014prolonged,
+  title={Prolonged sitting detection for office workers syndrome prevention using kinect},
+  author={Paliyawan, Pujana and Nukoolkit, Chakarida and Mongkolnam, Pornchai},
+  booktitle={2014 11th International Conference on Electrical Engineering/Electronics, Computer, Telecommunications and Information Technology (ECTI-CON)},
+  pages={1--6},
+  year={2014},
+  organization={IEEE},
+  doi={10.1109/ECTICon.2014.6839785}
+}
+@inproceedings{paliyawan2014office,
+  title={Office workers syndrome monitoring using Kinect},
+  author={Paliyawan, Pujana and Nukoolkit, Chakarida and Mongkolnam, Pornchai},
+  booktitle={The 20th Asia-Pacific Conference on Communication (APCC2014)},
+  pages={58--63},
+  year={2014},
+  organization={IEEE},
+  doi={10.1109/APCC.2014.7091605}
+}
+@inproceedings{tanaka2015nekoze,
+  author = {Tanaka, Katsuma and Ishimaru, Shoya and Kise, Koichi and Kunze, Kai and Inami, Masahiko},
+title = {Nekoze! Monitoring and Detecting Head Posture While Working with Laptop and Mobile Phone},
+year = {2015},
+isbn = {9781631900457},
+publisher = {ICST (Institute for Computer Sciences, Social-Informatics and Telecommunications Engineering)},
+address = {Brussels, BEL},
+booktitle = {Proceedings of the 9th International Conference on Pervasive Computing Technologies for Healthcare},
+pages = {237–240},
+numpages = {4},
+keywords = {eye wear computing, smart glasses, head posture},
+location = {Istanbul, Turkey},
+series = {PervasiveHealth ’15},
+doi={10.4108/icst.pervasivehealth.2015.260226}
+}
+@inproceedings{duffy2013measuring,
+  title={Measuring the effectiveness of user interventions in improving the seated posture of computer users},
+  author={Duffy, Paul and Smeaton, Alan F},
+  booktitle={International Joint Conference on Ambient Intelligence},
+  pages={3--12},
+  year={2013},
+  organization={Springer},
+  doi={10.1007/978-3-319-04406-4_2}
+}
+@inproceedings{estrada2017sitting,
+  title={Sitting posture recognition for computer users using smartphones and a web camera},
+  author={Estrada, Jheanel and Vea, Larry},
+  booktitle={TENCON 2017-2017 IEEE Region 10 Conference},
+  pages={1520--1525},
+  year={2017},
+  organization={IEEE},
+  doi={10.1109/TENCON.2017.8228098}
+}
+@article{fang2007workers,
+  title={Workers' compensation experiences of computer users with musculoskeletal disorders},
+  author={Fang, Shona and Dropkin, Jonathan and Herbert, Robin and Triola, Dushana and Landsbergis, Paul},
+  journal={American journal of industrial medicine},
+  volume={50},
+  number={7},
+  pages={512--518},
+  year={2007},
+  publisher={Wiley Online Library},
+  doi={10.1002/ajim.20478}
+}
+@article{gerr2004epidemiology,
+  title={Epidemiology of musculoskeletal disorders among computer users: lesson learned from the role of posture and keyboard use},
+  author={Gerr, Fred and Marcus, Michele and Monteilh, Carolyn},
+  journal={Journal of Electromyography and Kinesiology},
+  volume={14},
+  number={1},
+  pages={25--31},
+  year={2004},
+  publisher={Elsevier},
+  doi={10.1016/j.jelekin.2003.09.014}
+}
+@article{chang2007daily,
+  title={Daily computer usage correlated with undergraduate students' musculoskeletal symptoms},
+  author={Chang, Che-hsu and Amick III, Benjamin C and Menendez, Cammie Chaumont and Katz, Jeffrey N and Johnson, Peter W and Robertson, Michelle and Dennerlein, Jack Tigh},
+  journal={American journal of industrial medicine},
+  volume={50},
+  number={6},
+  pages={481--488},
+  year={2007},
+  publisher={Wiley Online Library},
+  doi={10.1002/ajim.20461}
+}
+@article{lintila2016development,
+  title={Development of computer vision based face tracking measurement for sitting ergonomics},
+  author={Lintil{\"a}, Tommi and Hyv{\"a}rinen, Valtteri and Kariniemi, Reijo and Kariniemi, R and Kc, A and Nurmi, L and others},
+  journal={Aaltodoc. Aalto. Fi},
+  volume={23},
+  number={6},
+  pages={111--115},
+  year={2016},
+  url={http://innomet.ttu.ee/daaam/proceedings/Mechatronics/Lintil\%C3\%A4.pdf}
+}
+@article{o2012physiotherapists,
+title = "What do physiotherapists consider to be the best sitting spinal posture?",
+journal = "Manual Therapy",
+volume = "17",
+number = "5",
+pages = "432 - 437",
+year = "2012",
+issn = "1356-689X",
+doi = "https://doi.org/10.1016/j.math.2012.04.007",
+url = "http://www.sciencedirect.com/science/article/pii/S1356689X12000938",
+author = "Kieran O'Sullivan and Peter O'Sullivan and Leonard O'Sullivan and Wim Dankaerts",
+keywords = "Posture, Back pain, Physiotherapy, Sitting",
+abstract = "While sitting is a common aggravating factor in low back pain (LBP), the best sitting posture remains unclear. This study investigated the perceptions of 295 physiotherapists in four different European countries on sitting posture. Physiotherapists selected their perceived best sitting posture from a sample of nine options that ranged from slumped to upright sitting, as well as completing the back beliefs questionnaire (BBQ). 85% of physiotherapists selected one of two postures as best, with one posture being selected significantly more frequently than the remainder (p < 0.05). Interestingly, these two most frequently selected postures were very different from each other. Those who selected the more upright sitting posture had more negative LBP beliefs on the BBQ (p < 0.05). The choice of best sitting posture also varied between countries (p < 0.05). Overall, disagreement remains on what constitutes a neutral spine posture, and what is the best sitting posture. Qualitative comments indicated that sitting postures which matched the natural shape of the spine, and appeared comfortable and/or relaxed without excessive muscle tone were often deemed advantageous. Further research on the perceptions of people with LBP on sitting posture are indicated."
+}
+@inproceedings{haller2011finding,
+  title={Finding the right way for interrupting people improving their sitting posture},
+  author={Haller, Michael and Richter, Christoph and Brandl, Peter and Gross, Sabine and Schossleitner, Gerold and Schrempf, Andreas and Nii, Hideaki and Sugimoto, Maki and Inami, Masahiko},
+  booktitle={IFIP conference on human-computer interaction},
+  pages={1--17},
+  year={2011},
+  organization={Springer},
+  doi={10.1007/978-3-642-23771-3_1}
+}
+@inproceedings{fogg1998persuasive,
+  title={Persuasive computers: perspectives and research directions},
+  author={Fogg, Brian J},
+  booktitle={Proceedings of the SIGCHI conference on Human factors in computing systems},
+  pages={225--232},
+  year={1998},
+  doi={10.1145/274644.274677}
+}
+@article{clark2012validity,
+  title={Validity of the Microsoft Kinect for assessment of postural control},
+  author={Clark, Ross A and Pua, Yong-Hao and Fortin, Karine and Ritchie, Callan and Webster, Kate E and Denehy, Linda and Bryant, Adam L},
+  journal={Gait \& posture},
+  volume={36},
+  number={3},
+  pages={372--377},
+  year={2012},
+  publisher={Elsevier},
+  doi={10.1016/j.gaitpost.2012.03.033}
+}
+@article{bibbo2019sitting,
+  title={A Sitting Posture Monitoring Instrument to Assess Different Levels of Cognitive Engagement},
+  author={Bibbo, Daniele and Carli, Marco and Conforto, Silvia and Battisti, Federica},
+  journal={Sensors},
+  volume={19},
+  number={3},
+  pages={455},
+  year={2019},
+  publisher={Multidisciplinary Digital Publishing Institute},
+  doi={10.3390/s19030455}
+}
+@article{cha2017patient,
+  title={Patient posture monitoring system based on flexible sensors},
+  author={Cha, Youngsu and Nam, Kihyuk and Kim, Doik},
+  journal={Sensors},
+  volume={17},
+  number={3},
+  pages={584},
+  year={2017},
+  publisher={Multidisciplinary Digital Publishing Institute},
+  doi={10.3390/s17030584}
+}
+@article{zhang2019architecture,
+  author="Zhang, Jun
+and Zhang, Hui
+and Dong, Chengcheng
+and Huang, Fanzhang
+and Liu, Qi
+and Song, Aiguo",
+title="Architecture and Design of a Wearable Robotic System for Body Posture Monitoring, Correction, and Rehabilitation Assist",
+journal="International Journal of Social Robotics",
+year="2019",
+month="Jun",
+day="01",
+volume="11",
+number="3",
+pages="423--436",
+abstract="With the heavy use of consumer electronic devices (CEDs) like smartphones, laptops, etc. in daily life, more and more people feel head, neck, and back pains because of long time poor body postures during the use of these devices. This paper presents a ``patients--robots--doctors'' architecture and designs a wearable robotic system for body postures monitoring, correction, and rehabilitation assist. The system mainly includes a wearable robotic device (WRD) and the CEDs. The WRD monitors the postures of body segments and reminds the user to correct bad postures. The posture data are sent to CEDs for processing and visualization. The data can also be uploaded to a cloud server for professional analysis by ``doctors''. The human body posture is modeled and simulated to show that the different postures of the body segments have large effects on the torques and forces acting on the joints and muscles. A posture detection method is proposed and the WRD is designed. The basic functions of the architecture and system are verified by experiments including head--neck posture, back posture, sleeping posture, and leg posture monitoring and correction warning. The architecture and system can be utilized not only by the patients--doctors in telerehabilitation exercise assist but also by the parents--children in good sitting habits development, the athletes--coaches and bodybuilders--instructors in training efficiency improvement, etc.",
+issn="1875-4805",
+doi="10.1007/s12369-019-00512-3",
+url="https://doi.org/10.1007/s12369-019-00512-3"
+}
+@misc{website:muckenthaler_ergonomie,
+    author = {Muckenthaler},
+    year = "2020",
+	title = {Muckenthaler Ergonomie Tipps},
+	url = {https://www.muckenthaler.de/ergonomie/ergonomie-tipps.html},
+	lastaccessed="February 12, 2020"
+}
+@article{likert1932technique,
+  title={A technique for the measurement of attitudes.},
+  author={Likert, Rensis},
+  journal={Archives of psychology},
+  year={1932},
+  url={https://psycnet.apa.org/record/1933-01885-001}
 }
