Final final version

--- a/content.tex
+++ b/content.tex
@@ -171,7 +171,7 @@ Second, as the chart of \autoref{fig:us-gs-longterm} depicts, all (100\%) partic
 
 \begin{figure}[htpb]
 \centering
-  \includegraphics[width=\linewidth]{media/user-study-1.png}
+  \includegraphics[width=0.9\linewidth]{media/user-study-1.png}
   \caption{User study}
   \label{fig:user-study-1}
 \end{figure}
